fixed overlay font size on small screans

--- a/app/styles/blocks/_portfolio-item.scss
+++ b/app/styles/blocks/_portfolio-item.scss
@@ -1,6 +1,6 @@
 .portfolio-item {
   float: left;
-  font-size: 18px;
+  font-size: 14px;
   color: #fff;
   text-align: center;
   font-weight: 300;
